# app-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py
